--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,40 @@
+appnope==0.1.3
 asgiref==3.7.2
+asttokens==2.2.1
+backcall==0.2.0
+black==23.7.0
+click==8.1.6
+coverage==7.3.0
+decorator==5.1.1
 dj-database-url==2.1.0
 dj-static==0.0.6
 Django==4.2.4
+django-auditlog==2.3.0
+django-debug-toolbar==4.2.0
+django-test-without-migrations==0.6
+executing==1.2.0
+ipdb==0.13.13
+ipython==8.14.0
+jedi==0.19.0
+matplotlib-inline==0.1.6
+mypy-extensions==1.0.0
+packaging==23.1
+parso==0.8.3
+pathspec==0.11.2
+pexpect==4.8.0
+pickleshare==0.7.5
 Pillow==10.0.0
+platformdirs==3.10.0
+prompt-toolkit==3.0.39
+ptyprocess==0.7.0
+pure-eval==0.2.2
+Pygments==2.16.1
+python-dateutil==2.8.2
 python-decouple==3.8
+six==1.16.0
 sqlparse==0.4.4
+stack-data==0.6.2
 static3==0.7.0
+traitlets==5.9.0
 typing_extensions==4.7.1
+wcwidth==0.2.6
