--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,10 @@ dj-static==0.0.6
 Django==4.2.4
 django-auditlog==2.3.0
 django-debug-toolbar==4.2.0
+django-object-actions==4.1.0
 django-test-without-migrations==0.6
 executing==1.2.0
+gunicorn==21.2.0
 ipdb==0.13.13
 ipython==8.14.0
 jedi==0.19.0
@@ -26,6 +28,7 @@ pickleshare==0.7.5
 Pillow==10.0.0
 platformdirs==3.10.0
 prompt-toolkit==3.0.39
+psycopg2-binary==2.9.7
 ptyprocess==0.7.0
 pure-eval==0.2.2
 Pygments==2.16.1
