--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -6,6 +6,11 @@ on:
   pull_request:
     branches: [ "main" ]
 
+env:
+  SECRET_KEY: git-x*8k_n95!c^l!5(zbbc9fi0h!x9ze!yii2nvbi*&xz8mfuns51
+  DEBUG: True
+  ALLOWED_HOSTS: 127.0.0.1, localhost
+
 jobs:
   build:
 
