--- a/requirements.txt
+++ b/requirements.txt
@@ -10,11 +10,13 @@ dj-database-url==2.1.0
 dj-static==0.0.6
 Django==5.0.7
 django-auditlog==3.0.0
+django-cors-headers==4.4.0
 django-debug-toolbar==4.2.0
 django-filter==24.2
 django-object-actions==4.1.0
 django-test-without-migrations==0.6
 djangorestframework==3.15.2
+djangorestframework-simplejwt==5.3.1
 drf-yasg==1.21.7
 executing==1.2.0
 gunicorn==21.2.0
@@ -39,6 +41,7 @@ psycopg2-binary==2.9.9
 ptyprocess==0.7.0
 pure-eval==0.2.2
 Pygments==2.16.1
+PyJWT==2.8.0
 pytest==8.1.1
 python-dateutil==2.8.2
 python-decouple==3.8
