--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -10,6 +10,9 @@ env:
   SECRET_KEY: git-x*8k_n95!c^l!5(zbbc9fi0h!x9ze!yii2nvbi*&xz8mfuns51
   DEBUG: True
   ALLOWED_HOSTS: 127.0.0.1, localhost
+  CORS_ALLOWED_ORIGINS: http://localhost:3000, http://127.0.0.1:3000
+  CSRF_TRUSTED_ORIGINS: http://localhost:3000, http://127.0.0.1:3000
+
 
 jobs:
   build-test-coverage:
